--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                 <div class="col-md-6">
                         <h3>WHO AM I</h3>
                         <p>
-                          je suis  POKAM wilfried ingenieur de travaux en reseaux et télécommunications
+                          je suis  POKAM wilfried ingenieur travaux en reseaux et télécommunications
                           née le 08 Avril 1995 a bafoussan. j'ai effectuer mes etudes secondaire au collège privé laic 
                           alfred nobel
 
