--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
      <div class="user-box">
      <img src="img/profil.png">
      <h1>POKAM wilfried francois</h1>
-     <p>ingenieur de travaux en reseaux et télécommunications</p>
+     <p>ingenieur de travaux en reseaux et télécommunications produit de UJPII</p>
      </div>
      </div>
        
