--- a/index.html
+++ b/index.html
@@ -68,11 +68,11 @@
                       <p><img src="img/profile.jpg" class="profile-img"><p>
                     </div>
                 <div class="col-md-6">
-                        <h3>WHO AM I</h3>
+                        <h3>QUI JE SUIS</h3>
                         <p>
                           je suis  POKAM wilfried ingenieur travaux en reseaux et télécommunications
                           née le 08 Avril 1995 a bafoussan. j'ai effectuer mes etudes secondaire au collège privé laic 
-                          alfred nobel
+                          alfred nobel,etude univisitaire a l'universiter saint jean paul II
 
                         </p>
 
