--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                 <div class="col-md-6">
                         <h3>QUI JE SUIS</h3>
                         <p>
-                          je suis  POKAM wilfried ingenieur travaux en reseaux et télécommunications
+                          je suis  POKAM wilfried ingenieur travaux en reseaux et télécommunications système
                           née le 08 Avril 1995 a bafoussan. j'ai effectuer mes etudes secondaire au collège privé laic 
                           alfred nobel,etude univisitaire a l'universiter saint jean paul II
 
