--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
      <div class="container text-center">
      <div class="user-box">
      <img src="img/profil.png">
-     <h1>POKAM wilfried francois fokoua</h1>
+     <h1>POKAM wilfried francois</h1>
      <p>ingenieur de travaux en reseaux et télécommunications produit de UJPII</p>
      </div>
      </div>
@@ -35,7 +35,7 @@
 
         <div class="nav-bar">
             <nav class="navbar navbar-expand-lg ">
-                    <a class="navbar-brand" href="#"><img src="img/logo.PNG" width="150" height="30"></a>
+                    <a class="navbar-brand" href="#"><img src="img/logo.png" width="150" height="30"></a>
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-
                          expanded="false" aria-label="Toggle navigation">
                           <i class="fa fa-bars"></i>
