--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
      <div class="container text-center">
      <div class="user-box">
      <img src="img/profil.png">
-     <h1>POKAM wilfried F</h1>
+     <h1>POKAM wilfried ALEX</h1>
      <p>ingenieur de travaux en reseaux et télécommunications produit de UJPII</p>
      </div>
      </div>
